--- a/addressbook/templates/pixelegg/app.css
+++ b/addressbook/templates/pixelegg/app.css
@@ -37,6 +37,12 @@ td.addressbook_sidebox_toolbar {
 div#divGenTime_addressbook {
   display: none;
 }
+div#addressbook_view_sidebox img.photo {
+  width: 68px;
+  padding-right: 3px;
+  height: auto;
+  vertical-align: bottom;
+}
 /**
  * new addressbook.edit
  */
